--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      
+      "jsx-a11y/img-redundant-alt": "warn"
+      
+    }
   },
   "browserslist": {
     "production": [
